--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bradleymubenga",
+  "name": "creativebradley.com",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,15 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "animate.css": "^4.1.1",
-    "bootstrap": "^5.0.2",
-    "next": "11.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "sass": "^1.36.0"
-  },
-  "devDependencies": {
-    "eslint": "7.31.0",
-    "eslint-config-next": "11.0.1"
+    "eslint": "8.28.0",
+    "eslint-config-next": "13.0.5",
+    "next": "13.0.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
